--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "point-motion_frontend_task",
   "version": "0.1.0",
   "private": true,
+  "author": "Sankalp Yadav",
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
